Spacing fixes on T3

--- a/ui/scss/project/patterns/_list-table.scss
+++ b/ui/scss/project/patterns/_list-table.scss
@@ -331,7 +331,7 @@
 
   .list--table__item__body--stat {
     width: 25%;
-    padding-right: 2.5%;
+    padding-right: 1%
   }
 
   .list--table__item__body--select {
@@ -367,7 +367,7 @@
 
   .list--table__item__body--stat {
     width: 25%;
-    padding-right: 0;
+    padding-right: 1%;
   }
 
   .list--table__item__body--caption {
@@ -388,12 +388,12 @@
     }
 
     .list--table__item__body--update {
-      min-width: 15rem;
+      min-width: 12.5rem;
     }
 
     .list--table__item__body--stat {
       width: 25%;
-      padding-right: 5%;
+      padding-right: 1%
     }
 
     .list--table__item__body--select {
